--- a/render-play.html
+++ b/render-play.html
@@ -14,40 +14,44 @@
   }
   </style>
   <script>
-  var handleSlide = function(a, b) {
+  var updateImage = function() {
     var getv = function(id) {
-      return $(".slider#" + id ).slider( "value" );
+      return parseFloat($(".slider#" + id ).slider( "value" )) / 1000.0;
     };
-    $("#dat_svg").attr('src', "http://localhost:8088/render/" + getv("x") + ",2.4,2.5/-0.3,-0.5,-0.6");
+    $("#dat_svg").attr('src', "http://localhost:8088/render/" + getv("x") + "," + getv("y") + "," + getv("z") + "/" + getv("a1") + "," + getv("a2") + "," + getv("a3"));
+  };
+  var handleSlide = function(a,b) {
+    updateImage();
   };
 
   $(function() {
     // setup dim sliders
     $( ".slider.dim" ).each(function() {
-      var value = parseFloat ( $( this ).text(), 0.0 );
+      var value = parseFloat ( $( this ).text(), 0.0 ) * 1000.0;
       $( this ).empty().slider({
         value: value,
         range: "min",
         animate: true,
-	step: 0.1,
-	min: -10.0,
-	max: 10.0,
+	min: -10000,
+	max: 10000,
         orientation: "vertical"
       }).on( "slidechange", handleSlide );
     });
 
     // setup angle sliders
     $( ".slider.ang" ).each(function() {
-      var value = parseFloat ( $( this ).text(), 0.0 );
+      var value = parseFloat ( $( this ).text(), 0.0 ) * 1000.0;
       $( this ).empty().slider({
         value: value,
         range: "min",
         animate: true,
-	min: -3.14159,
-	max: 3.14159,
+	min: -3141,
+	max: 3141,
         orientation: "vertical"
       }).on( "slidechange", handleSlide );
     });
+
+    updateImage();
   });
   </script>
 </head>
